--- a/products.html
+++ b/products.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <style>
-        /* img{
+        img{
             max-height: 250px;
             object-fit: cover;
-        } */
+        }
     </style>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
