--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
